Add distance slider to filter results by maximum distance

--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
 
 .slider-labels {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 #results div {
