Add distance slider to set max distance for search and update code to handle it

--- a/style.css
+++ b/style.css
@@ -42,8 +42,7 @@ body {
 
 .slider-labels {
     display: flex;
-    justify-content: center;
-    margin-top: 10px;
+    justify-content: space-between;
 }
 
 #results div {
